<resources>
    <!--<string name="app_name">CNC</string>-->
    <string name="app_name">CAM8515</string>
    <string name="GetStarted">Get Started</string>
    <string name="StudentNumber">Your student number</string>
    <string name="login">login</string>
    <string name="title_activity_login_page">LoginPageActivity</string>
    <string name="Assignments">Assignments</string>
    <string name="CheckList">Check List</string>
    <string name="Submissions">Submissions</string>
    <string name="Manual">CNC Manual</string>
    <string name="Status">My Status</string>
    <string name="submit">submit</string>
    <string name="cancel">cancel</string>
    <string name="comments">comments</string>
    <string name="Dos1">Checklist 1 - DO\'S</string>
    <string name="Donts">DON\'T\'S</string>
    <string name="Dos2">Checklist 2 - DO\'S</string>
    <string name="select">select photos</string>
    <string name="SubmitViaEmail">Submit Through Email</string>
    <string name="SubmitViaMS">Submit Through Microsoft Forms</string>

    <!-- For Orientation : Lai Shan Law-->
    <string name="orientation">Orientation</string>
    <string name="exercise1Btn">Goto Exercise 1</string>
    <string name="goSubmit">Submit</string>
    <string name="notGoSubmit">Exit!</string>
    <string name="assigName">ASSIGNMENT</string>
    <string name="alertSubmitExercise1">You have not completed the Orientation Certificate!</string>
    <string name="alertSubmitExercise2">If you exit now, you will need to start over!</string>
    <string name="warningNoAccess1">You have not granted permission to access this page!</string>
    <string name="alertSubmitAssign1">You have not submitted the assignment!</string>
    <string name="alertSubmitAssign2">If you exit now, you will need to start over from the Checklist!</string>
    <string name="wantExit">Do you want to exit?</string>
    <string name="logout">Log out</string>
    <string name="submitTitle1">Title</string>
    <string name="email_sub">Student :</string>
    <string name="submitEmail">Email Address</string>
    <string name="submitStudentID">StudentID</string>
    <string name="startTime">Start Time: </string>
    <string name="submitStartTime">N/A</string>
    <string name="endTime">End Time: </string>
    <string name="submitEndTime">End Time</string>
    <string name="checklistTime">Checklist Time: </string>
    <string name="submitChecklistTime">N/A</string>
    <string name="desc">Status: </string>
    <string name="description">Description</string>
    <string name="admin">Administration</string>
    <string name="admin_changeEmail">Assginment will be sent to the following email address : </string>
    <string name="admin_getEmail_bt">Set the assignment submission location</string>
    <string name="admin_editEmail">Receiver email address</string>
    <string name="admin_report_bt">Get The Assignment Status </string>
    <string name="hint_status">Not Submitted</string>
    <string name="invalid_student_id">Invalid ID!</string>
    <string name="error_email">Invalid Email Address</string>





    <!--For Login and Register by Ny Nguyen    -->
    <string name="GetStartedTitle1">CAM8515</string>
    <string name="GetStartedTitle2">COMPUTER AIDED MANUFACTURING I</string>
    <string name="welcome">Welcome to CAM8515</string>
    <string name="email">Email</string>
    <string name="hint_email">Enter email address </string>
    <string name="password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="text_login">LOGIN </string>
    <string name="text_not_member">"Don't have an account yet? Register"</string>
    <string name="studentID">StudentID </string>
    <string name="hint_studentID">Enter studentID </string>
    <string name="confirm_password">Confirm Password </string>
    <string name="text_register">REGISTER</string>
    <string name="text_already_member">Already have an account? Login</string>
    <string name="error_message_studentID">Enter Valid StudentID</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Valid Password </string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="success_message">Registration Successful</string>
    <string name="unsuccess_message">Registration unsuccessful (ID/Email exists). Please try again!</string>
    <string name="error_valid_email_password">Wrong Email or Password, please try again!</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="hint_verification_code">6-digit number </string>
    <string name="text_resend_verification_code">Resend Verification Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="text_reset_password">Forgot Password? Reset it</string>

    <!--    REST API SERVER URL/ADDRESS -->
    <!-- use the below one when you are using actual Pixel 3 device connecting through home wifi -->
    <!--    <string name="rest_url">http://192.168.2.200:8181/api/</string>-->

    <!-- use the below for virtual device running on the pc -->
    <!--<string name="rest_url">http://10.0.2.2:8181/api/</string>-->

    <string name="rest_url">http://192.168.0.22:8181/api/</string>
     </resources>