<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginPage.RegisterActivity">

    <TextView
        android:text="@string/studentID"
        android:id="@+id/StudentID"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:gravity="left" />


    <EditText
        android:id="@+id/textStudentID"
        android:hint="@string/hint_studentID"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/StudentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:maxLines="1"
        android:gravity="left" />

    <TextView
        android:text="@string/email"
        android:id="@+id/Email"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/textStudentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="left" />

    <EditText
        android:id="@+id/textEmail"
        android:hint="@string/hint_email"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:maxLines="1"
        android:gravity="left" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEmail"
        android:layout_marginTop="13dp"
        android:gravity="left"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/textConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConfirmPassword"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/confirm_password"
        android:id="@+id/ConfirmPassword"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="left" />

    <Button
        android:text="@string/text_register"
        android:id="@+id/ButtonRegister"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/textConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp" />

    <TextView
        android:text="@string/text_already_member"
        android:id="@+id/LoginLink"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/ButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="13dp"
        android:gravity="center" />



</RelativeLayout>
    <!--android:backgroundTint="@color/colorButton"-->
    <!--android:background="@color/colorBackground"-->

    <!--android:textColor="@android:color/white"-->