<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".main.EntranceActivity"
    android:layout_gravity="center"
    >

    <TextView
        android:id="@+id/Welcome1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GetStartedTitle1"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"
        />


    <TextView
        android:id="@+id/Welcome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GetStartedTitle2"
        android:layout_below="@+id/Welcome1"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <Button
        android:id="@+id/GetStarted_Bt"
        android:layout_below="@+id/Welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GetStarted"
        android:layout_marginTop="50dp"
        android:background="@color/orange"
        android:layout_centerInParent="true"
        />

</RelativeLayout>