<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_password"
    style="@style/activity_activation"
    tools:context=".loginPage.VerificationActivity">
<!--    tools:context=".loginPage.ActivationActivity">-->


    <EditText
        android:id="@+id/textResetConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetConfirmPassword"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="149dp"
        android:gravity="left"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold|italic" />


    <TextView
        android:id="@+id/resetConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textResetPassword"
        android:layout_marginTop="39dp"
        android:gravity="left"
        android:text="@string/confirm_password"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/textResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPassword"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/ButtonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="353dp"
        android:text="@string/reset_password"
        android:textSize="18sp"
        android:textStyle="bold|italic" />


</RelativeLayout>
    <!--android:backgroundTint="@color/colorButton"-->
   <!-- android:background="@color/colorBackground"-->
   <!-- android:textColor="@android:color/white"-->