<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".main.EntranceActivity"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/exercises_Button"
        android:clickable="true"
        android:layout_below="@+id/Welcome"
        android:gravity="center"
        android:layout_margin="40dp"
        >


        <Button
            android:id="@+id/registerButton"
            android:text="@string/text_register"

            android:textSize="14dp"
            android:textStyle="bold|italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_margin="10dp"
            android:layout_weight="1"

            />

        <Button
            android:id="@+id/loginButton"
            android:text="@string/text_login"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_margin="10dp"
            android:layout_weight="1"
            />


    </LinearLayout>




</RelativeLayout>
    <!--android:backgroundTint="@color/colorButton"-->
    <!--android:background="@color/colorBackground"-->